# arabic-lesson-restAPI

./: Cargo.toml
migrations/: 20250404112159_create_items.sql  20250430191922_Users.sql
src/: draft.txt  handlers.rs  main.rs  serializers.rs  state.rs
src/auth/: handlers.rs  mod.rs  seralizers.rs
src/handlers/: lesson.rs  mod.rs  query.rs  textbook.rs  word.rs
src/lessons/: mod.rs  routes.rs  serializers.rs  state.rs
src/utils/: pagination.rs
