[package]
name = "lesson_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "derive", "chrono"]}
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }